<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:text="@string/label_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter first name"/>

        <TextView
            android:text="@string/label_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter last name"/>

        <TextView
            android:text="@string/label_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/etSchool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter school"/>

        <TextView
            android:text="@string/label_year_of_graduation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/etYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter year of graduation"/>

        <TextView
            android:text="@string/label_degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/etDegree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter degree"/>

        <TextView
            android:text="@string/label_major"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/etMajor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter major"/>

        <TextView
            android:text="@string/label_favorite_activities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/etActivities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter favorite activities"/>

        <Button
            android:id="@+id/btnSubmit"
            android:text="@string/button_convert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>